Add tournament folder /tournament and quizes